<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbarStyle="outsideOverlay"
    android:background="@drawable/red_button_bg"
    tools:context=".fragment.AchievmentsView">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/ShowInof"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_marginTop="60dp"
                android:text="@string/dont_donor"
                android:textColor="@color/white"
                android:visibility="gone" />
            <LinearLayout
                android:id="@+id/donorAchiev"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/donateInfo"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/donated_today"
                    android:backgroundTint="@color/primary_dark"
                    android:background="@drawable/signin_btn"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:visibility="visible"
                    android:id="@+id/yesnolayout"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnYes"
                        android:text="@string/yes"
                        android:textColor="@color/white"
                        android:layout_marginEnd="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primary_dark"/>
                    <Button
                        android:text="@string/no"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primary_dark"/>

                </LinearLayout>
                <TextView
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/nextDonate"
                    android:gravity="center"
                    android:backgroundTint="@color/primary_dark"
                    android:background="@drawable/circle"
                    android:text="34 days"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:padding="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:backgroundTint="@color/primary_dark"
                            android:background="@drawable/signin_btn"
                            android:textColor="@android:color/white"
                            android:text="Total Donated:"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/settotalDonate"
                            android:gravity="center"
                            android:backgroundTint="@color/primary_dark"
                            android:background="@drawable/circle"
                            android:text="1 times"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:backgroundTint="@color/primary_dark"
                            android:background="@drawable/signin_btn"
                            android:textColor="@android:color/white"
                            android:text="Last donated:"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/setLastDonate"
                            android:gravity="center"
                            android:backgroundTint="@color/primary_dark"
                            android:background="@drawable/circle"
                            android:text="12/12/2018"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="279dp"
        android:layout_marginBottom="10dp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>