<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_button_bg"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".ProfileActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:background="@drawable/coveredit"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                >

            </LinearLayout>

            <TextView
                android:id="@+id/account_profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
                app:layout_constraintStart_toStartOf="@+id/linearLayout6"
                app:layout_constraintTop_toTopOf="@+id/linearLayout6" />

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:elevation="6dp"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_profile_image">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/user"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout6"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout6" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            >
            <LinearLayout
                android:padding="3dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Name:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>
                <EditText
                    android:layout_marginLeft="52dp"
                    android:id="@+id/input_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/displayName"
                    android:textColorHint="@color/white"
                    android:inputType="text"
                    android:textColor="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sex:"
                    android:textColor="@color/white"/>

                <Spinner
                    android:layout_marginLeft="67dp"
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/gender">

                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Blood Group:"
                    android:textColor="@color/white"/>

                <Spinner
                    android:layout_marginLeft="13dp"
                    android:id="@+id/inputBloodGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/Blood_Group">

                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:padding="3dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact No:"
                    android:textColor="@color/white"/>
                <EditText
                    android:layout_marginLeft="20dp"
                    android:id="@+id/inputMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:textColorHint="@color/white"
                    android:inputType="text"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:padding="3dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address:"
                    android:textColor="@color/white"/>
                <EditText
                    android:layout_marginLeft="40dp"
                    android:id="@+id/inputAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userAddress"
                    android:textColorHint="@color/white"
                    android:inputType="text"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Division:"
                    android:textColor="@color/white"/>

                <Spinner
                    android:layout_marginLeft="42dp"
                    android:id="@+id/inputDivision"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/division_list">
                </Spinner>
            </LinearLayout>

            <EditText
                android:id="@+id/input_userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/input_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_confirm_password"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
            <CheckBox
                android:id="@+id/checkbox"
                android:text="Mark this to be a donor"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <Button
                android:id="@+id/button_register"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#CD2E2E"
                android:text="@string/signup"
                android:enabled="true"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="20sp"
                />

            <LinearLayout
                android:id="@+id/orTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/divider"
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/white"
                    />
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="OR"
                    android:textColor="@color/white" />
                <View
                    android:id="@+id/divider2"
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/white" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:layout_gravity="center_horizontal"
                android:text="Already have a Account?Sing In!"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.19999999" />

        </LinearLayout>




    </LinearLayout>

</ScrollView>